feat(api): api
Summary:
  - add API and default user
